spacing fix

--- a/styles.css
+++ b/styles.css
@@ -820,4 +820,5 @@ footer {
 
 .gd__content-img {
     width: 100%;
+    margin: 16px 0;
 }
